# books-pricing-app

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: backend_pre_start.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0c27ed846584_create_book_table.py  ea8601f95bbb_create_initial_data.py
app/api/routes/: base.py  book.py  health.py
app/core/: config.py  db.py
app/crud/: base.py  book.py
app/models/: book.py
app/repository/: base.py  book.py
app/schemas/: book.py
tests/: conftest.py  test_script.py
tests/api/: test_books.py
